# ncnn

./: CMakeLists.txt
src/: CMakeLists.txt  gpu.cpp  gpu.h  layer.cpp  layer.h  mat.h  net.cpp  net.h  platform.h.in
src/layer/: absval.cpp  argmax.cpp  batchnorm.cpp  bias.cpp  binaryop.cpp  bnll.cpp  clip.cpp  concat.cpp  convolution.cpp  convolutiondepthwise.cpp  crop.cpp  deconvolution.cpp  deconvolutiondepthwise.cpp  detectionoutput.cpp  dropout.cpp  eltwise.cpp  elu.cpp  embed.cpp  exp.cpp  expanddims.cpp  flatten.cpp  innerproduct.cpp  input.cpp  instancenorm.cpp  interp.cpp  lrn.cpp  lstm.cpp  memorydata.cpp  mvn.cpp  normalize.cpp  permute.cpp  pooling.cpp  power.cpp  prelu.cpp  priorbox.cpp  proposal.cpp  reduction.cpp  relu.cpp  reshape.cpp  rnn.cpp  (+13 more)
src/layer/arm/: absval_arm.cpp  absval_arm.h  batchnorm_arm.cpp  batchnorm_arm.h  bias_arm.cpp  bias_arm.h  convolution_arm.cpp  convolution_arm.h  convolutiondepthwise_arm.cpp  convolutiondepthwise_arm.h  deconvolution_arm.cpp  deconvolution_arm.h  deconvolutiondepthwise_arm.cpp  eltwise_arm.cpp  eltwise_arm.h  innerproduct_arm.cpp  innerproduct_arm.h  lrn_arm.cpp  lrn_arm.h  pooling_arm.cpp  pooling_arm.h  prelu_arm.cpp  prelu_arm.h  relu_arm.cpp  relu_arm.h  scale_arm.cpp  scale_arm.h  sigmoid_arm.cpp  sigmoid_arm.h  softmax_arm.cpp  softmax_arm.h
src/layer/opencl/: convolution.cl  convolution_opencl.cpp  convolution_opencl.h  relu.cl  relu_opencl.cpp  relu_opencl.h
src/layer/x86/: convolution_x86.cpp  convolution_x86.h  convolutiondepthwise_x86.cpp  convolutiondepthwise_x86.h  relu_x86.cpp  relu_x86.h
